k8s/dynatrace.yaml

apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: axoo-track-dynatrace
  labels:
    app: axoo-track-dynatrace
spec:
  selector:
    matchLabels:
      app: axoo-track-dynatrace
  template:
    metadata:
      labels:
        app: axoo-track-dynatrace
    spec:
      containers:
        - name: oneagent
          image: dynatrace/oneagent:latest
          securityContext:
            privileged: true
          volumeMounts:
            - name: docker-sock
              mountPath: /var/run/docker.sock
              readOnly: true
            - name: host-root
              mountPath: /mnt/root
              readOnly: true
      hostPID: true
      hostNetwork: true
      volumes:
        - name: docker-sock
          hostPath:
            path: /var/run/docker.sock
        - name: host-root
          hostPath:
            path: /
